// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonToggle renders correctly in active state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#121314",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#ffffff",
        "fontFamily": "Geist-Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    Mode 1
  </Text>
</View>
`;

exports[`ButtonToggle renders correctly in inactive state 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#3c4d9d0f",
      "borderColor": "transparent",
      "borderRadius": 12,
      "borderWidth": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
  >
    Mode 1
  </Text>
</View>
`;
